# RustCityGML2OBJ

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  docker-compose.example.yml
src/: conversion_functions.rs  geometry_functions.rs  main.rs  translation_module.rs  write_functions.rs
