[package]
name = "RustCityGML2OBJ"
version = "0.1.0"
edition = "2024"

[dependencies]
ecitygml = "0.0.2-alpha.1"
ecitygml-io = "0.0.2-alpha.1"
ecitygml-transform = "0.0.2-alpha.1"
rayon = "1.11.0"
egml = "0.0.2-alpha.1"
ecitygml-core = "0.0.2-alpha.1"
earcut = "0.4.4"
clap = { version = "4.5.48", features = ["derive"] }
regex = "1"
nalgebra = "0.33.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }